--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  http:
+  flutter_screenutil: ^5.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
