--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   get: ^4.6.6
   http:
   flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
